<resources xmlns:color="http://schemas.android.com/tools">
    <string name="app_name">google</string>
    <string name="action_settings">Settings</string>
    <string name="btn_logout_from_google">Logout from Google</string>
    <string name="btn_revoke_access">Revoke Access</string>
    <string name="today_s_news">Today\'s News</string>
    <string name="log_out">Log out</string>
    <string name="profile">Profile</string>
    <string name="about_us">About Us</string>
    <string name="administration">Administration</string>
    <string name="academics">Academics</string>
    <string name="departments">Departments</string>
    <string name="placement">Placement</string>
    <string name="campus">Campus</string>
    <string name="contact_us">Contact us</string>
    <string name="nirf">NIRF</string>
    <string name="home">Home</string>
    <string name="title_activity_contactus">contactus</string>
    <string name="rmk_engineering_college">RMK ENGINEERING COLLEGE</string>
    <string name="ipadress">http://rmkec.ac.in/mobileapp</string>
    <string name="register_no_staff_use_library_number_from_id_card">Register No ( staff - Use library Number from ID Card )</string>
    <string name="enter_university_register_number">Enter University Register Number</string>
    <string name="enter_your_name">Enter Your Name</string>
    <string name="date_of_birth_yyyy_mm_dd">Date of Birth YYYY-MM-DD</string>
    <string name="enter_your_dob_in_yyyy_mm_dd">enter your dob in yyyy_mm_dd</string>
    <string name="name">Name</string>
    <string-array name="department">
        <item>Select</item>
        <item>CE</item>
        <item>CSE</item>
        <item>EEE</item>
        <item>EIE</item>
        <item>IT</item>
        <item>ME</item>
        <item>ECE</item>
        <item>MBA</item>
        <item>MCA</item>
        <item>MEAPE</item>
        <item>MECSE</item>
        <item>MEPED</item>
        <item>MEVLSI</item>
        <item>SH</item>
    </string-array>
    <string name="mobile_number">Mobile Number</string>
    <string name="enter_your_mobile_number">Enter Your Mobile Number</string>
    <string name="email">Email</string>
    <string name="alternate_email">Alternate Email</string>
    <string name="enter_your_email">Enter Your email</string>
    <string name="password">Password</string>
    <string name="enter_your_password">Enter Your Password</string>
    <string name="batch_final_sem_year_staff_select_joining_year">Batch: Final Sem Year ( staff : select Joining Year )</string>
    <string-array name="category">
        <item>Select</item>
        <item>Student</item>
        <item>Staff</item>
        <item>HOD</item>
        <item>Office</item>
        <item>Parent</item>
        <item>Others</item>
    </string-array>
    <string name="register">Register</string>
    <string name="r_m_k_engineering_college">R.M.K ENGINEERING COLLEGE</string>
    <string name="chairman">Chairman</string>
    <string name="vice_chairman">Vice Chairman</string>
    <string name="management">Management</string>
    <string name="chairman_message">Chairman Message</string>
    <string name="vision_and_mission">Vision And Mission</string>
    <string name="app_url">http://rmkec.ac.in/mobileapp/</string>
    <string name="distinguished_guests">Distinguished Guests</string>
    <string name="chairman_content"><![CDATA[ <b><font color=#F44336 > Thiru.R.S.Munirathinam Founder-Chairman</b> of R.M.K Engineering College is well known for his philanthropic attitude and service as an elected member of the State Assembly of Tamil Nadu. He envisioned a technological revolution and committed himself to establish an institution, to foster technical and higher education. He is a rare breed of educationalist, for whom quality is the way of life.<br><br>A compassionate and modest person to associate with, he is quite undeterred in his conviction in executing to perfection anything that is for common good.<br><br>
The lush green environment, the expansive buildings, the well-equipped laboratories and the unparalleled discipline of the students standout as shining examples of his own unique style of management.<br><br>
Thanks to the full time participation of the Management and the guidance provided by learned professors, the college has achieved great heights. The Management believes that the nation needs not just engineers and professionals, but virtuous men and women who can be engineers and professionals. Integrity of character and discipline are imparted to students to become good citizens capable of utilizing their talents for the development of our Nation.]]></string>
    <string name="vicechair_content"><![CDATA[ <b><font color=#F44336 > Thiru.R.M.Kishor</b> is a Mechanical Engineer from the University of Madras and has acquired his Masters degree in Business administration from University of Huddersfield, UK. A young member of the team, who has been managing the RMK group of Educational Institutions.<br><br>
With the full time participation of the Management and the guidance provided by learned professors, the college has achieved great heights in the field of technical education.<br><br>
The Management believes that the nation needs not just engineers and professionals, but virtuous men & women who can be engineers and professionals. Integrity of character, and discipline are imparted to students to produce good citizens capable of utilizing their talents for our Nation.]]></string>
    <string name="chairmanmessage">Dear Student,\n\nWelcome Home to RMK Engineering College.\n\nThe transition from school to college is a very big step in life. You have put in so much hardwork in your public exams, spent sleepless nights, earned a rewarding score, and with the blessings of your parent/guardian you have joined your chosen stream of education to realize your life-ambition and set the foundation for your future. By choosing to create a future for yourself from our institution means that we, the teachers and management at RMK are also responsible for your successful graduation and growth. You will cherish every day at your college, right from day one, you will feel welcome by all of us here – your seniors, your new professors, and members of administration you will get to interact with. What’s more the energetic environment will have you charged up to achieve your dream with confidence like never before. I assure you, you are home.\n\nIt is your career path that you have now embarked upon, which will be a remarkable journey in itself that will prepare you for a life beyond college. We hope to make your journey with us, engaging, encouraging and enlivening as ever, for you to grow as a thorough individual, ready to take on life as an adult. We pray and will work with you to see you become one with the society where your contribution will make a definitive difference to our world.\n\nThe commitment from us begins from day one - to work with you and walk with you through each day all through the years you will spend here which is your home away from home. As I mentioned earlier, the learned staff and the ever accessible management is there to guide you through your path and help you nurture your dreams and fulfill them – by empowering you to realize your true potential. Be it studies, sports or any extracurricular activities, you don’t just graduate with a degree and a certificate – but become a graduate of life and a true citizen of the world of tomorrow.\n\nWish you all the very best.\nYours truly,\nR. S. Munirathinam\nChairman, RMK Engineering College.</string>
    <string name="vision1">To be the most preferred destination in the country for obtaining education in Engineering,Management and its allied fields, at the undergraduate, post graduate and research levels.</string>
    <string name="vision2">To transform learners into achievers at the global level with the right attitude towards changing societal needs.</string>
    <string name="mission1">To develop the resources and infrastructure not only to meet the statutory requirements but also far exceed them to become a preferred destination for learners by providing a conducive ambience for the teaching- learning process.</string>
    <string name="mission2">To develop in the learners high personal and professional ethical values, technical competence and a spirit of entrepreneurship.</string>
    <string name="mission3">To develop in the learners a desire for higher learning and research</string>
    <string name="mission4">To interact with industries and other organizations to provide for transfer of knowledge and know how.</string>
    <string name="mission5">Equip the students to face the global challenges.</string>
    <string name="chairperson"><![CDATA[ <b><font color=#F44336 >Tmt. Manjula Munirathinam,</b><br><b> Chairperson.,</b><br><br>A keen social worker involved with various women forums. She has been in the educational field for the last 12 years.]]></string>
    <string name="director"><![CDATA[ <b><font color=#F44336 >Thiru.R. Jothi Naidu,</b><br><b> Director.,</b><br><br>An industrialist with vast experience in various business lines, he has been involved in the management of the group of institutions for the past 12 years.]]></string>
    <string name="vice_chair"><![CDATA[ <b><font color=#F44336 >Thiru.R.M. Kishore</b><br><b> Vice Chairman</b><br><br>Thiru. R.M.Kishore is a Mechanical Engineer from the University of Madras and has acquired his Masters degree in Business administration from University of Huddersfield, UK. A young member of the team, who has been managing the RMK group of Educational Institutions.]]></string>
    <string name="secretary"><![CDATA[ <b><font color=#F44336 >Thiru.Yalamanchi Pradeep</b><br><b> Secreteray</b><br><br>Shri. Pradeep Yalamanchi is an Electronics and Communications Engineer from the Guindy Engineering College, Chennai (Anna University) and Obtained his Masters Degree in Information Systems Management from Carnegie Mellon University, USA.]]></string>
    <string name="vice_chairperson"><![CDATA[ <b><font color=#F44336 >Tmt. Durga Devi Pradeep</b><br><b> Vice Chairperson</b><br><br>She holds a Bachelor’s Degree in Electronics and Communications Engineering from the University of Madras. She has her M.B.A Degree from the prestigious Anna University. She is currently pursuing her PhD in Management.]]></string>
    <string name="trustee"><![CDATA[ <b><font color=#F44336 >Tmt. Sowmya Kishore </b><br><b>Trustee</b><br><br>She holds a Bachelor’s Degree in Electronics and Communications Engineering from Sathyabama University.]]></string>
    <string name="senior_government_officials_1">Dr. Rajagopala Chidambaram, Principle Scientific Investigator, Govt. of India</string>
    <string name="senior_government_officials_2">Dr. Anil Kakodkar, Chairman, Atomic Energy Commission, Govt. of India.</string>
    <string name="senior_government_officials_3">Dr. Srikanta K. Panigrahi, Advisor to Prime Minister on Climate Change, and Director General,Carbon Minus India</string>
    <string name="senior_government_officials_4">Hon\'ble Mr. Justice B. Subhashan Reddy,Chief Justice, High Court, Madras.</string>
    <string name="senior_government_officials_5">Hon\'ble Mr. Justice D. Murugesan, Judge, High Court, Madras.</string>
    <string name="senior_government_officials_6">Hon\'ble Mr. Justice V. Kanagarajan, Judge, High Court, Madras.</string>
    <string name="senior_government_officials_7">Mr. N. Parameswaran, Chief General Manager, VSNL, Chennai.</string>
    <string name="vision">VISION</string>
    <string name="mission">MISSION</string>
    <string name="principal1">Principal</string>
    <string name="governing_board1">Governing Board</string>
    <string name="dean1">Dean</string>
    <string name="academic_co_cordinator1">Academic Co Cordinator</string>
    <string name="head_of_departments1">Head of Departments</string>
    <string name="admission_procedure1">Admission Procedure</string>
</resources>