<?xml version="1.0" encoding="utf-8"?>

    <ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context="com.example.guru.google.Registration">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="32dp">

            <TextView
                android:id="@+id/registernumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/register_no_staff_use_library_number_from_id_card"
                android:textColor="#000000"
                android:textSize="20sp"
                android:layout_marginBottom="4dp"/>

            <EditText
                android:id="@+id/enterregisternumber"
                android:layout_width="match_parent"
                android:layout_height="32sp"
                android:ems="10"
                android:inputType="textPersonName"
                android:hint="@string/enter_university_register_number"
                android:background="@drawable/border"
                android:textSize="16sp"
                android:layout_marginBottom="12dp"/>

            <TextView
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:textColor="#000000"
                android:textSize="20sp"
                android:layout_marginBottom="4dp"/>

            <EditText
                android:id="@+id/entername"
                android:layout_width="match_parent"
                android:layout_height="32sp"
                android:ems="10"
                android:inputType="textPersonName"
                android:hint="@string/enter_your_name"
                android:background="@drawable/border"
                android:textSize="16sp"
                android:layout_marginBottom="12dp"/>

            <TextView
                android:id="@+id/dateofbirth"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/date_of_birth_yyyy_mm_dd"
                android:textColor="#000000"
                android:textSize="20sp"
                android:layout_marginBottom="4dp"/>

            <EditText
                android:id="@+id/enter_dob"
                android:layout_width="match_parent"
                android:layout_height="32sp"
                android:layout_marginBottom="12dp"
                android:background="@drawable/border"
                android:ems="10"
                android:hint="@string/enter_your_dob_in_yyyy_mm_dd"
                android:inputType="textPersonName"
                android:textSize="16sp"
                android:focusable="false"/>

            <TextView
                android:id="@+id/department"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/department"
                android:textColor="#000000"
                android:textSize="20sp"
                android:layout_marginBottom="4dp"/>

            <Spinner
                android:id="@+id/selectdepartment"
                android:layout_width="match_parent"
                android:layout_height="32sp"
                android:layout_marginBottom="12dp"
                style="@style/spinner_style"/>

            <TextView
                android:id="@+id/mobilenumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/mobile_number"
                android:textColor="#000000"
                android:textSize="20sp"
                android:layout_marginBottom="4dp"/>

            <EditText
                android:id="@+id/entermobilenumber"
                android:layout_width="match_parent"
                android:layout_height="32sp"
                android:layout_marginBottom="12dp"
                android:background="@drawable/border"
                android:ems="10"
                android:hint="@string/enter_your_mobile_number"
                android:inputType="number"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:textColor="#000000"
                android:textSize="20sp"
                android:layout_marginBottom="4dp"/>

            <EditText
                android:id="@+id/enteremail"
                android:layout_width="match_parent"
                android:layout_height="32sp"
                android:ems="10"
                android:inputType="textEmailAddress"
                android:text="Name"
                android:textColor="#000000"
                android:background="@drawable/border"
                android:textSize="16sp"
                android:layout_marginBottom="12dp"/>

            <TextView
                android:id="@+id/altemail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/alternate_email"
                android:textColor="#000000"
                android:textSize="20sp"
                android:layout_marginBottom="4dp"                />

            <EditText
                android:id="@+id/enteraltemail"
                android:layout_width="match_parent"
                android:layout_height="32sp"
                android:ems="10"
                android:inputType="textEmailAddress"
                android:hint="@string/enter_your_email"
                android:background="@drawable/border"
                android:textSize="16sp"
                android:layout_marginBottom="12dp"/>

            <TextView
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/password"
                android:textColor="#000000"
                android:textSize="20sp"
                android:layout_marginBottom="4dp"/>

            <EditText
                android:id="@+id/enterpassword"
                android:layout_width="match_parent"
                android:layout_height="32sp"
                android:ems="10"
                android:inputType="textPassword"
                android:background="@drawable/border"
                android:textSize="16sp"
                android:layout_marginBottom="12dp"/>

            <TextView
                android:id="@+id/batch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/batch_final_sem_year_staff_select_joining_year"
                android:textColor="#000000"
                android:textSize="20sp"
                android:layout_marginBottom="4dp"
                />


            <Spinner
                android:id="@+id/selectbatch"
                android:layout_width="match_parent"
                android:layout_height="32sp"
                android:layout_marginBottom="12dp"
                style="@style/spinner_style"/>

            <TextView
                android:id="@+id/category"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/category"
                android:textColor="#000000"
                android:textSize="20sp"
                android:layout_marginBottom="4dp"/>

            <Spinner
                android:id="@+id/selectcategry"
                android:layout_width="match_parent"
                android:layout_height="32sp"
                style="@style/spinner_style"
                android:layout_marginBottom="32dp"
              />

            <Button
                android:id="@+id/register"
                android:layout_width="match_parent"
                android:layout_height="32dp"
                android:text="@string/register"
                android:textSize="20sp"
                android:textColor="#ffffff"
                android:textStyle="bold"
                android:background="@drawable/button_border"
                android:layout_marginBottom="8dp" />

        </LinearLayout>
    </ScrollView>

